# SDMA

./: CMakeLists.txt  LICENSE  hls.tcl
spmm_prj/: kernel.xml
spmm_prj/sol1/: sol1.aps  sol1.directive  sol1_data.json
spmm_prj/sol1/.autopilot/: .autopilot_exit
spmm_prj/sol1/.autopilot/db/: .message_impl.xml  .message_syn.xml  __ctype_info__.xml  a.g  a.g.0.bc  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.g.lto.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.bc  all.directive.json  apatb_spmm_hls.cpp  apatb_spmm_hls_ir.bc  apatb_spmm_hls_ir.ll  au_merge.adb  au_merge.bind.adb  au_merge.bind.adb.xml  au_merge.compgen.tcl  au_merge.sched.adb  au_merge.sched.adb.xml  au_merge.tbgen.tcl  au_merge.verbose.bind.rpt  au_merge.verbose.bind.rpt.xml  au_merge.verbose.rpt  au_merge.verbose.rpt.xml  au_merge.verbose.sched.rpt  au_merge.verbose.sched.rpt.xml  au_merge_Pipeline_VITIS_LOOP_157_1.adb  au_merge_Pipeline_VITIS_LOOP_157_1.bind.adb  (+1710 more)
spmm_prj/sol1/.debug/: spmm_hls.protoinst
spmm_prj/sol1/impl/misc/: spmm_hls_uitofp_32ns_32_4_no_dsp_1_ip.tcl
spmm_prj/sol1/impl/verilog/: spmm_hls.v  spmm_hls_Dense_Buf0_RAM_2P_BRAM_1R1W.v  spmm_hls_Out_Buf0_RAM_2P_BRAM_0R0W.v  spmm_hls_control_r_s_axi.v  spmm_hls_dataflow_in_loop_VITIS_LOOP_144_1.v  spmm_hls_dataflow_in_loop_row_loop.v  spmm_hls_dfm.v  (+125 more)
src/: common.hpp  main.cpp  preprocess.cpp  preprocess.hpp  spmm.cpp  spmm.hpp  spmm_device.cpp  spmm_device.hpp  spmm_device_fpga.cpp  spmm_device_fpga.hpp
(+546 files in other folders)
